fix: chip layout in <readme> on mobile.
Align chip's version with title.

--- a/src/app/pages/readme/readme.component.scss
+++ b/src/app/pages/readme/readme.component.scss
@@ -4,7 +4,11 @@
 
   & mat-chip {
     margin-left: 24px;
-    margin-top: 18px;
+    margin-top: 20px;
+
+    @media (max-width: 1025px) {
+      margin-top: 6px;
+    }
   }
 }
 
